<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微信</string>
    <string name="action_settings">Settings</string>
     
     <string name="action_search">查找</string>
      <string name="action_add">添加</string>
      
    <string name="tab_wechat">微信</string>
    <string name="tab_address_list">通讯录</string>
    <string name="tab_found">发现</string>
    <string name="tab_me">我</string>
    <string name="menu_grouptalk">发起群聊</string>
    <string name="menu_addfriends">添加朋友</string>
    <string name="menu_scan">扫一扫</string>
    <string name="menu_pay">收付款</string>
    <string name="menu_help">帮助与反馈</string>
   

</resources>