<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:hyman="http://schemas.android.com/apk/res/com.twac.wechat6_0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal" >

        <com.twac.wechat6_0.ChangeColorIconWithText
            android:id="@+id/indicator_1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            hyman:icon="@drawable/wechat_buttom_weixin"
            hyman:text="@string/tab_wechat"
            hyman:text_size="12sp"
            hyman:color="#ff45c01a" />

        <com.twac.wechat6_0.ChangeColorIconWithText
            android:id="@+id/indicator_2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            hyman:icon="@drawable/wechat_buttom_tonguxnlu"
            hyman:text="@string/tab_address_list"
            hyman:text_size="12sp"
            hyman:color="#ff45c01a" />

        <com.twac.wechat6_0.ChangeColorIconWithText
            android:id="@+id/indicator_3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            hyman:icon="@drawable/wechat_buttom_pengyouquan"
            hyman:text="@string/tab_found"
            hyman:text_size="12sp"
            hyman:color="#ff45c01a" />

        <com.twac.wechat6_0.ChangeColorIconWithText
            android:id="@+id/indicator_4"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            hyman:icon="@drawable/wechat_buttom_wo"
            hyman:text="@string/tab_me"
            hyman:text_size="12sp"
            hyman:color="#ff45c01a" />
    </LinearLayout>

</LinearLayout>